Update job validation and minor ui changes

--- a/WebApp/Views/Job/_CreateJobModal.cshtml
+++ b/WebApp/Views/Job/_CreateJobModal.cshtml
@@ -132,7 +132,7 @@
                                         <!-- Certification Skills -->
                                         <div class="flex-1">
                                             <label asp-for="SkillsC" class="block text-sm font-medium text-gray-700"></label>
-                                            <input placeholder="Microsoft Azure Certification, CompTIA CASP+ CE" type="text" id="createJobSkillsCInput" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" />
+                                            <input placeholder="PhilNITS FE, CompTIA CASP+ CE" type="text" id="createJobSkillsCInput" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" />
                                             <div type="hidden" id="skillsCHiddenInputs" name="SkillsC"></div>
                                             <span asp-validation-for="SkillsC" class="text-sm text-red-500" id="skillsCValidation"></span>
                                         </div>
