--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -20,13 +20,16 @@
 </head>
 <body>
     <div class="layout bg-[#F5F7F8]">
-        @if (User.IsInRole("Applicant"))
+        @if(ViewBag.loginView != true)
         {
-            @await Html.PartialAsync("_Header")
-        }
-        else
-        {
-            @await Html.PartialAsync("_Sidebar")
+            if (User.IsInRole("Applicant"))
+            {
+                @await Html.PartialAsync("_Header")
+            }
+            else
+            {
+                @await Html.PartialAsync("_Sidebar")
+            }
         }
         <main role="main" class="content">
             @{
@@ -37,7 +40,7 @@
 			{
                 <footer class="footer d-flex justify-content-between align-items-center mb-3 p-0" style="color:black; z-index:1;">
                     <div>
-                        <img src="~/img/logoBW.png" style="width: 150px;" alt="login-logo" class="ml-5" />
+                        <img src="~/img/logo1.png" style="width: 150px;" alt="login-logo" class="ml-5" />
                     </div>
                     <div class="mr-5">
                         &copy; @DateTime.Now.Year GradSync
